[metadata]
name = iced_coffeine
version = attr: iced_coffeine.__version__
description = Polars based fork of the coffeine library for predictive M/EEG pipelines 
author = Julius Cathalina
author_email = julius.cathalina@gmail.com
license = "MIT"
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
url = https://github.com/jcathalina/retrospect

[options]
packages = find:
python_requires = >= 3.10
zip_safe = False
include_package_data = True
install_requires =
    numpy>=1.23.1
    polars>=0.17
    scipy>=1.8.1
    tqdm>=4.64.0
    scikit-learn>=1.0.1
    mne[data]>=1.3
    pyriemann

[options.extras_require]
dev =
    black>=22.1.0
    bump2version>=1.0.1
    flake8>=3.7.9
    isort>=5.10.0
    mypy>=0.910
    pytest>=5.4.1
    sphinx-rtd-theme==0.4.3
    sphinx==2.2.1
    twine==3.1.1
    types-setuptools>=62.6.0
notebooks =
    jupyterlab>=3
    matplotlib
    seaborn
    ipywidgets

[flake8]
extend-ignore = E203, E501
